[Chore]: Replace porting-lib model_loader module with own implementation